--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "autoprefixer": "^10.4.17",
